--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tienda_zapatos",
   "version": "1.0.0",
   "description": "\"Tienda usando node y mongo atlas\"",
-  "main": "index.js",
+  "main": "api/api.js",
   "scripts": {
     "start": "node api.js",
     "dev": "nodemon api.js"
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/superyaz/Tienda_Zapatos#readme",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^5.7.0"
